# eDesk

./: .eslintrc.js  .gitignore  package-lock.json  package.json
.erb/configs/: webpack.config.main.prod.ts  webpack.config.preload.dev.ts  webpack.paths.ts
.erb/scripts/: build-native.ts
native/robotjs-exe/: .gitignore  CMakeLists.txt
native/robotjs-exe/src/: main.cpp  transformer.cpp  transformer.h  utils.h
release/app/: package-lock.json  package.json
src/main/: control.ts  controlWindow.ts  ipc.ts  main.ts  mainWindow.ts  preload.ts  preloadControl.ts  robot.ts  signal.ts  status.ts  util.ts
src/main/connection/: base.ts  inviteeConnection.ts  inviterConnection.ts
src/main/domEvents/: index.ts
src/main/ipc/: controllerIPC.ts  ipc.ts  mainIPC.ts
src/main/windows/: controllerPreload.ts  controllerWindow.ts  mainPreload.ts  mainWindow.ts  masterPreload.ts  masterWindow.ts  slavePreload.ts  slaveWindow.ts
src/renderer/: App.css  App.tsx  Controller.tsx  Home.tsx  index.ejs  preload.d.ts  utils.ts
src/renderer/components/BeingControlled/: index.module.css  index.tsx
src/renderer/components/CircleLoading/: index.module.css  index.tsx
src/renderer/components/ClientStatus/: index.module.css  index.tsx
src/renderer/components/Controlling/: index.tsx
src/renderer/components/RequestControlling/: index.module.css  index.tsx
src/renderer/domEvents/: index.ts
src/renderer/hooks/: useVersion.ts
src/renderer/pages/: Master.tsx  Slave.tsx
src/renderer/pages/Controller/: index.module.css  index.tsx
src/renderer/pages/Main/: index.tsx
src/renderer/pages/Master/: index.module.css  (+1 more)
src/renderer/utils/: index.ts
src/shared/logger/: index.ts
src/shared/types/: index.ts
(+2 files in other folders)
