cmake_minimum_required(VERSION 3.5.1)

project("robotjs-exe")

add_compile_options(-Wall)

if(APPLE)
    add_executable (robotjs "src/main.cpp" "src/transformer.cpp" "vender/robotjs/deadbeef_rand.c" "vender/robotjs/mouse.c" "vender/robotjs/keypress.c" "vender/robotjs/keycode.c" "vender/robotjs/screen.c")
    find_library(COREFOUNDATION_LIBRARY CoreFoundation)
    find_library(CARBON_LIBRARY Carbon)
    find_library(APPLICATIONSERVICES_LIBRARY ApplicationServices REQUIRED)
    find_library(OPENGL_LIBRARY OpenGL)
    find_library(IOKIT_LIBRARY IOKit)
    target_link_libraries(robotjs ${COREFOUNDATION_LIBRARY})
    target_link_libraries(robotjs ${CARBON_LIBRARY})
    target_link_libraries(robotjs ${APPLICATIONSERVICES_LIBRARY})
    target_link_libraries(robotjs ${OPENGL_LIBRARY})
    target_link_libraries(robotjs ${IOKIT_LIBRARY})
elseif(WIN32)
    add_executable (robotjs "src/main.cpp" "src/transformer.cpp" "vender/robotjs/deadbeef_rand.c" "vender/robotjs/mouse.c" "vender/robotjs/keypress.c" "vender/robotjs/keycode.c" "vender/robotjs/screen.c")
    set(IS_WINDOWS TRUE)
elseif(UNIX)
    add_executable (robotjs "src/main.cpp" "src/transformer.cpp" "vender/robotjs/deadbeef_rand.c" "vender/robotjs/mouse.c" "vender/robotjs/keypress.c" "vender/robotjs/keycode.c" "vender/robotjs/screen.c" "vender/robotjs/xdisplay.c")
    set(USE_X11 TRUE)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(X11 REQUIRED x11)
    pkg_check_modules(XTST REQUIRED xtst)
    target_link_libraries(robotjs ${X11_LIBRARIES})
    target_link_libraries(robotjs ${XTST_LIBRARIES})
endif()
